add new filter section

--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -210,6 +210,10 @@ layout: base.liquid
             </div>
 
             <div class="filter">
+                <h2>New Filter<h2>
+
+
+                
                 <h2>Filter</h2>
                 <table>
                     <tbody>
