html bug in stories

--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -210,10 +210,7 @@ layout: base.liquid
             </div>
 
             <div class="filter">
-                <h2>New Filter<h2>
-
-
-                
+                <h2>New Filter</h2>
                 <h2>Filter</h2>
                 <table>
                     <tbody>
@@ -382,7 +379,6 @@ layout: base.liquid
                         </ul>
                     </li>
                 </ul>
-
             </div>
         </article>
     </section>
