--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -211,7 +211,7 @@ layout: base.liquid
 
             <div class="filter">
                 <h2>New Filter</h2>
-                <h2>Filter</h2>
+                <h2>Filter added in Gitpod on 3 oct</h2>
                 <table>
                     <tbody>
                     <tr>
