add land filter checkbox

--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -213,7 +213,20 @@ layout: base.liquid
                 <h2>New Filter</h2>
                 <h2>Filter added in Gitpod on 3 oct</h2>
                 <h2>Filter added in Gitpod on 4 oct</h2>
-                
+
+                <div class="checkbox-wrapper-16">
+                    <label class="checkbox-wrapper">
+                      <input type="checkbox" class="checkbox-input" />
+                      <span class="checkbox-tile">
+                        <span class="checkbox-icon">
+                          <img src="https://cdn-icons-png.flaticon.com/512/1505/1505794.png" />
+                        </span>
+                        <span class="checkbox-label">Land</span>
+                      </span>
+                    </label>
+                  </div>
+                  
+
                 <table>
                     <tbody>
                     <tr>
