gitpod testing 6 oct

--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -213,6 +213,7 @@ layout: base.liquid
                 <h2>New Filter</h2>
                 <h2>Filter added in Gitpod on 3 oct</h2>
                 <h2>Filter added in Gitpod on 4 oct</h2>
+                <h2>Filter added in Gitpod on 6 oct 1.1</h2>
 
                 <div class="checkbox-wrapper-16">
                     <label class="checkbox-wrapper">
