--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -215,6 +215,14 @@ layout: base.liquid
                 <h2>Filter added in Gitpod on 4 oct</h2>
                 <h2>Filter added in Gitpod on 6 oct 1.1</h2>
 
+             <div class="filter-controls">
+                    <label class="switch">
+                      <input type="checkbox" id="toggle-all-filters">
+                      <span class="slider round"></span>
+                    </label>
+                    <span class="switch-label">Toggle All Filters</span>
+                </div>
+
             <div class="new_filter">
 
                 <div class="checkbox-columns">
@@ -443,8 +451,62 @@ layout: base.liquid
   }
 }
 
+/* Style the switch */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+  border-radius: 34px;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+  border-radius: 50%;
+}
+
+input:checked + .slider {
+  background-color: #c3d7b6;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #c3d7b6;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
 
 </style>
+
 
                 </div>              
 
