change map filter titles

--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -84,7 +84,7 @@ layout: base.liquid
         </article>
         <article>
             <div class="map-filters">
-                <h2> Map filters</h2>
+                <h2>Maps</h2>
                 <ul>
                     <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="1" class="map_filter" id="checkbox1"/>
                         <label for="checkbox1">
@@ -210,10 +210,7 @@ layout: base.liquid
             </div>
 
             <div class="filter">
-                <h2>New Filter</h2>
-                <h2>Filter added in Gitpod on 3 oct</h2>
-                <h2>Filter added in Gitpod on 4 oct</h2>
-                <h2>Filter added in Gitpod on 6 oct 1.1</h2>
+                <h2>Features</h2>
 
              <div class="filter-controls">
                     <label class="switch">
