change seller checkbox title

--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -123,7 +123,7 @@ layout: base.liquid
                     </li>
                     <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="3" class="map_filter" id="checkbox3" />
                         <label for="checkbox3">
-                            <h3>Seller checkbox title</h3>
+                            <h3>Seller</h3>
                             <img src="https://i.ebayimg.com/images/g/ojsAAOSwNEVdXw0v/s-l1600.jpg"/>
                             <p>1676</p>
                         </label>
