--- a/frontend/assets/css/style.scss
+++ b/frontend/assets/css/style.scss
@@ -499,26 +499,51 @@ nav {
           margin: 0;
           padding: 0;
           .map-filters {
+           /* styling the map icons */
             ul {
               list-style-type: none;
               max-width: auto;
               margin-left: -40px;
-              li {
-                display: inline-block;
-                width: 4.2%;
-                padding-right: 1%;
-                /*  &:after{
-            content: "";
-            background: gray;
-            width: 1.5em;
-            height: 0.2em;
-            position: absolute;
-            display: inline-block;
-            margin-left: 4vw;
-            margin-top: -4vw;
-          }*/
+              display: flex;
+              flex-wrap: wrap;
+              justify-content: flex-start;
+            }
+
+            li {
+              display: inline-block;
+              width: 4.2%;
+              padding-right: 1%;
+              white-space: nowrap; 
+              margin-bottom: 0;
+              /*  &:after{
+              content: "";
+              background: gray;
+              width: 1.5em;
+              height: 0.2em;
+              position: absolute;
+              display: inline-block;
+              margin-left: 4vw;
+              margin-top: -4vw;
+            }*/
+            }
+
+            /* for smaller screens */
+            @media (max-width: 768px) {
+              ul {
+                flex-direction: row; 
+                flex-wrap: wrap; 
               }
-            } //li
+              li {
+                width: 16%; /* set 5 columns on mobile */
+                margin-bottom: 12px; 
+              }
+              li img {
+                width: 10vw; /* instead of keep 4vw on desptop, adjust to 10vw on mobile which looks not too small */
+                height: 10vw; 
+              }
+            }
+
+
           } //ul
 
           input[type="checkbox"][id^="checkbox"] {
@@ -547,6 +572,8 @@ nav {
               border: 2px solid white;
               opacity: 0.7;
               padding: 0;
+              display: block;
+              margin: 0 auto; /* set this to auto to horizontally center the image(little map icons) on mobile */
               //border-radius:50%;
               &:hover {
                 border: 2px solid lightgray;
