--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -518,15 +518,24 @@ nav {
        * Provide a border when hovered and when the input is checked
        */
 }
+.mapOverlay section:last-child article:last-child .map-filters {
+  /* styling the map icons */
+  /* for smaller screens */
+}
 .mapOverlay section:last-child article:last-child .map-filters ul {
   list-style-type: none;
   max-width: auto;
   margin-left: -40px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
 }
-.mapOverlay section:last-child article:last-child .map-filters ul li {
+.mapOverlay section:last-child article:last-child .map-filters li {
   display: inline-block;
   width: 4.2%;
   padding-right: 1%;
+  white-space: nowrap;
+  margin-bottom: 0;
   /*  &:after{
     content: "";
     background: gray;
@@ -537,6 +546,20 @@ nav {
     margin-left: 4vw;
     margin-top: -4vw;
   }*/
+}
+@media (max-width: 768px) {
+  .mapOverlay section:last-child article:last-child .map-filters ul {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  .mapOverlay section:last-child article:last-child .map-filters li {
+    width: 16%; /* set 5 columns on mobile */
+    margin-bottom: 12px;
+  }
+  .mapOverlay section:last-child article:last-child .map-filters li img {
+    width: 10vw; /* instead of keep 4vw on desptop, adjust to 10vw on mobile which looks not too small */
+    height: 10vw;
+  }
 }
 .mapOverlay section:last-child article:last-child input[type=checkbox][id^=checkbox] {
   display: none;
@@ -563,6 +586,8 @@ nav {
   border: 2px solid white;
   opacity: 0.7;
   padding: 0;
+  display: block;
+  margin: 0 auto; /* set this to auto to horizontally center the image(little map icons) on mobile */
 }
 .mapOverlay section:last-child article:last-child label img:hover {
   border: 2px solid lightgray;
