fix: adjust explore section intro text

--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -87,18 +87,15 @@ layout: base.liquid
         {% renderFile "./stories/lines.md", "liquid" %}
     </section>
 
-
     <section id="filters">
         <article class="storyTitle">
             <h2>Explore</h2>
         </article>
         <article>
-            <p>Use the filters below to customise your search. There are 3 categories; maps, feature and people.
-                Click </p>
+            <p>Customize your search using the filters below. 
+               Choose the map images or feature icons to enable the filters you require.
+            </p>
         </article>
-
-        
-        
 
         <article id="half-page-filter">
           <button id="toggleButton" class="active">Toggle Element</button>
