separate d3 intros from first section slides

--- a/frontend/assets/css/style.scss
+++ b/frontend/assets/css/style.scss
@@ -472,6 +472,12 @@ nav {
       } //filter
     } //article
 
+    .storyTitleSpacerAbove {
+      padding-top: 40vh;
+    }
+    .storyTitleSpacerBelow {
+      padding-bottom: 50vh;
+    }
     // Story Heading
     article.storyTitle {
       padding: 0 2em;
