slide trigger updates

--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -64,7 +64,7 @@ layout: base.liquid
 
     <section id="s-2">
         <div class="storyTitleSpacerAbove" id="s2-start"></div>
-        <article id="slide_500" data-slideId="500" class="storyTitle">
+        <article id="slide_500" data-slideId="500" class="storyTitle mapSlide">
             <h2>Homelands</h2>
         </article>
         <div class="storyTitleSpacerBelow"></div>
@@ -72,7 +72,7 @@ layout: base.liquid
     </section>
     <section id="s-3">
         <div class="storyTitleSpacerAbove"></div>
-        <article id="slide_600" data-slideId="600" class="storyTitle">
+        <article id="slide_600" data-slideId="600" class="storyTitle mapSlide">
             <h2>Pathways</h2>
         </article>
          <div class="storyTitleSpacerBelow"></div>
@@ -80,7 +80,7 @@ layout: base.liquid
     </section>
     <section id="s-4">
         <div class="storyTitleSpacerAbove" id="s2-start"></div>
-        <article class="storyTitle" id="slide_700" data-slideId="700" >
+        <article class="storyTitle mapSlide" id="slide_700" data-slideId="700" >
             <h2>Villagers, Settlers</h2>
         </article>
          <div class="storyTitleSpacerBelow"></div>
@@ -88,7 +88,7 @@ layout: base.liquid
     </section>
     <section id="s-5">
         <div class="storyTitleSpacerAbove" id="s2-start"></div>
-        <article class="storyTitle" id="slide_800" data-slideId="800" >
+        <article class="storyTitle mapSlide" id="slide_800" data-slideId="800" >
             <h2>Lines</h2>
         </article>
          <div class="storyTitleSpacerBelow"></div>
@@ -96,7 +96,7 @@ layout: base.liquid
     </section>
 
     <section id="filters">
-        <article class="storyTitle">
+        <article class="storyTitle mapSlide">
             <h2>Explore</h2>
         </article>
         <article>
@@ -327,7 +327,6 @@ layout: base.liquid
                       </span>
                                 </label>
                             </div>
-
                             <div class="checkbox-wrapper-1">
                                 <label class="checkbox-wrapper">
                                     <input type="checkbox" class="checkbox-input"/>
