extra spacers between sections

--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -54,11 +54,14 @@ layout: base.liquid
                 Ut error voluptatem qui eveniet quibusdam eos unde assumenda aut dolor accusantium est iure aliquam eos
                 eligendi expedita aut minima voluptatem.</p>
         </article>
+        <div class="article_spacer">&nbsp;</div>
     </section>
+
     <section id="s-1">
         <article class="storyTitle">
             <h2>Introduction</h2>
         </article>
+        <div class="article_spacer">&nbsp;</div>
         {% renderFile "./stories/introduction.md", "liquid" %}
     </section>
 
@@ -67,6 +70,7 @@ layout: base.liquid
         <article id="slide_500" data-slideId="500" class="storyTitle mapSlide">
             <h2>Homelands</h2>
         </article>
+        <div class="article_spacer">&nbsp;</div>
         <div class="storyTitleSpacerBelow"></div>
         {% renderFile "./stories/homelands.md", "liquid" %}
     </section>
@@ -75,6 +79,7 @@ layout: base.liquid
         <article id="slide_600" data-slideId="600" class="storyTitle mapSlide">
             <h2>Pathways</h2>
         </article>
+        <div class="article_spacer">&nbsp;</div>
          <div class="storyTitleSpacerBelow"></div>
         {% renderFile "./stories/pathways.md", "liquid" %}
     </section>
@@ -83,6 +88,7 @@ layout: base.liquid
         <article class="storyTitle mapSlide" id="slide_700" data-slideId="700" >
             <h2>Villagers, Settlers</h2>
         </article>
+        <div class="article_spacer">&nbsp;</div>
          <div class="storyTitleSpacerBelow"></div>
         {% renderFile "./stories/villagers_settlers.md", "liquid" %}
     </section>
@@ -91,6 +97,7 @@ layout: base.liquid
         <article class="storyTitle mapSlide" id="slide_800" data-slideId="800" >
             <h2>Lines</h2>
         </article>
+        <div class="article_spacer">&nbsp;</div>
          <div class="storyTitleSpacerBelow"></div>
         {% renderFile "./stories/lines.md", "liquid" %}
     </section>
