feat: centered map articles increased opacity

--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -112,7 +112,7 @@ layout: base.liquid
             </p>
         </article>
 
-        <article id="half-page-filter">
+      <!-- <article id="half-page-filter">
             <button id="toggleButton" class="active">Toggle Element</button>
 
             <div id="filterContainer" class="map-filters">
@@ -647,7 +647,7 @@ layout: base.liquid
                             </style>
 
 
-        </article>
+        </article>-->
 
 
     </section>
