--- a/frontend/assets/css/style.scss
+++ b/frontend/assets/css/style.scss
@@ -53,9 +53,15 @@ $seafoam: #b2d2a4;
 // END MIXINS
 
 // GENERAL
+
 html {
+  box-sizing: border-box;
   scroll-behavior: smooth;
 }
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 body {
   width: 100%;
   padding: 0;
@@ -326,11 +332,23 @@ nav {
       }
     } //ol
   } //nav
-
+/*&:last-child {
+      width: 100%;
+      margin: 0;
+      article {
+        width: 40%;
+        margin: 0 30% 0 30%;
+        &.storyTitle {
+          margin-bottom: 0;
+        } //.storyTitle {
+        &:last-child {
+          width: 100%;
+          margin: 0;
+          padding: 0;*/
   section {
-    width: 40%;
+    width: 100%;
     position: relative;
-    margin: 0 0 0 60%;
+    margin: 0;
     padding: 0;
     h1 a {
       margin-top: 10em;
@@ -342,10 +360,10 @@ nav {
       padding-bottom: 75vh;
     }
     article {
-      width: calc(95% - 4em);
-      background: rgba(255, 255, 255, 0.7);
-      padding: 1em 2em;
-      margin: 0 5% 0 0;
+      width: 70%;
+      background: rgba(255, 255, 255, 0.9);
+      padding: 16px 32px;
+      margin: 0 15% 0 15%;
       text-align: justify;
 
       blockquote {
@@ -496,124 +514,7 @@ nav {
       } //h2
     } //article.storyTitle
 
-    &:last-child {
-      width: 100%;
-      margin: 0;
-      article {
-        width: 40%;
-        margin: 0 30% 0 30%;
-        &.storyTitle {
-          margin-bottom: 0;
-        } //.storyTitle {
-        &:last-child {
-          width: 100%;
-          margin: 0;
-          padding: 0;
-          .map-filters {
-           /* styling the map icons */
-            ul {
-              list-style-type: none;
-              max-width: auto;
-              margin-left: -40px;
-              display: flex;
-              flex-wrap: wrap;
-              justify-content: flex-start;
-            }
 
-            li {
-              display: inline-block;
-              width: 4.2%;
-              padding-right: 1%;
-              white-space: nowrap; 
-              margin-bottom: 0;
-              /*  &:after{
-              content: "";
-              background: gray;
-              width: 1.5em;
-              height: 0.2em;
-              position: absolute;
-              display: inline-block;
-              margin-left: 4vw;
-              margin-top: -4vw;
-            }*/
-            }
-
-            /* for smaller screens */
-            @media (max-width: 768px) {
-              ul {
-                flex-direction: row; 
-                flex-wrap: wrap; 
-              }
-              li {
-                width: 16%; /* set 5 columns on mobile */
-                margin-bottom: 12px; 
-              }
-              li img {
-                width: 10vw; /* instead of keep 4vw on desptop, adjust to 10vw on mobile which looks not too small */
-                height: 10vw; 
-              }
-            }
-
-
-          } //ul
-
-          input[type="checkbox"][id^="checkbox"] {
-            display: none;
-          }
-
-          label {
-            display: block;
-            position: relative;
-            cursor: pointer;
-            text-align: center;
-            h3 {
-              //transform: rotate(-45deg);
-              font-size: 0.7em;
-              margin: 0;
-              padding: 0;
-            } //h3
-            p {
-              margin: 0;
-              font-size: 0.8em;
-            } //p
-            img {
-              height: 4vw;
-              width: 4vw;
-              transition-duration: 0.2s;
-              border: 2px solid white;
-              opacity: 0.7;
-              padding: 0;
-              display: block;
-              margin: 0 auto; /* set this to auto to horizontally center the image(little map icons) on mobile */
-              //border-radius:50%;
-              &:hover {
-                border: 2px solid lightgray;
-                opacity: 1;
-                transform: scale(0.95);
-              }
-            } //img
-          } //label
-
-          /**
-               * Provide a border when hovered and when the input is checked
-               */
-
-          :checked + label:before {
-            transform: scale(2);
-          }
-
-          :checked + label img {
-            transform: scale(1);
-            border: 2px solid black;
-            opacity: 1;
-            &:hover {
-              opacity: 1;
-              transform: scale(1);
-            }
-          } //.map-filters
-        } //&:last-child
-      } //article
-    } //&:last-child
   } //section
 } //#map
 //MAP
