--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Pontano+Sans&display=swap");
 /*** MIXINS ***/
 html {
+  box-sizing: border-box;
   scroll-behavior: smooth;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
 }
 
 body {
@@ -161,6 +166,19 @@ nav {
   z-index: 1 !important;
   position: absolute;
   pointer-events: none;
+  /*&:last-child {
+        width: 100%;
+        margin: 0;
+        article {
+          width: 40%;
+          margin: 0 30% 0 30%;
+          &.storyTitle {
+            margin-bottom: 0;
+          } //.storyTitle {
+          &:last-child {
+            width: 100%;
+            margin: 0;
+            padding: 0;*/
 }
 .mapOverlay img {
   max-width: 100%;
@@ -285,9 +303,9 @@ nav {
   max-height: 1000px;
 }
 .mapOverlay section {
-  width: 40%;
+  width: 100%;
   position: relative;
-  margin: 0 0 0 60%;
+  margin: 0;
   padding: 0;
 }
 .mapOverlay section h1 a {
@@ -299,10 +317,10 @@ nav {
   padding-bottom: 75vh;
 }
 .mapOverlay section article {
-  width: calc(95% - 4em);
-  background: rgba(255, 255, 255, 0.7);
-  padding: 1em 2em;
-  margin: 0 5% 0 0;
+  width: 70%;
+  background: rgba(255, 255, 255, 0.9);
+  padding: 16px 32px;
+  margin: 0 15% 0 15%;
   text-align: justify;
 }
 .mapOverlay section article blockquote {
@@ -508,111 +526,4 @@ nav {
   color: white;
   margin: 0;
   padding: 0.2em 0;
-}
-.mapOverlay section:last-child {
-  width: 100%;
-  margin: 0;
-}
-.mapOverlay section:last-child article {
-  width: 40%;
-  margin: 0 30% 0 30%;
-}
-.mapOverlay section:last-child article.storyTitle {
-  margin-bottom: 0;
-}
-.mapOverlay section:last-child article:last-child {
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  /**
-       * Provide a border when hovered and when the input is checked
-       */
-}
-.mapOverlay section:last-child article:last-child .map-filters {
-  /* styling the map icons */
-  /* for smaller screens */
-}
-.mapOverlay section:last-child article:last-child .map-filters ul {
-  list-style-type: none;
-  max-width: auto;
-  margin-left: -40px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-}
-.mapOverlay section:last-child article:last-child .map-filters li {
-  display: inline-block;
-  width: 4.2%;
-  padding-right: 1%;
-  white-space: nowrap;
-  margin-bottom: 0;
-  /*  &:after{
-    content: "";
-    background: gray;
-    width: 1.5em;
-    height: 0.2em;
-    position: absolute;
-    display: inline-block;
-    margin-left: 4vw;
-    margin-top: -4vw;
-  }*/
-}
-@media (max-width: 768px) {
-  .mapOverlay section:last-child article:last-child .map-filters ul {
-    flex-direction: row;
-    flex-wrap: wrap;
-  }
-  .mapOverlay section:last-child article:last-child .map-filters li {
-    width: 16%; /* set 5 columns on mobile */
-    margin-bottom: 12px;
-  }
-  .mapOverlay section:last-child article:last-child .map-filters li img {
-    width: 10vw; /* instead of keep 4vw on desptop, adjust to 10vw on mobile which looks not too small */
-    height: 10vw;
-  }
-}
-.mapOverlay section:last-child article:last-child input[type=checkbox][id^=checkbox] {
-  display: none;
-}
-.mapOverlay section:last-child article:last-child label {
-  display: block;
-  position: relative;
-  cursor: pointer;
-  text-align: center;
-}
-.mapOverlay section:last-child article:last-child label h3 {
-  font-size: 0.7em;
-  margin: 0;
-  padding: 0;
-}
-.mapOverlay section:last-child article:last-child label p {
-  margin: 0;
-  font-size: 0.8em;
-}
-.mapOverlay section:last-child article:last-child label img {
-  height: 4vw;
-  width: 4vw;
-  transition-duration: 0.2s;
-  border: 2px solid white;
-  opacity: 0.7;
-  padding: 0;
-  display: block;
-  margin: 0 auto; /* set this to auto to horizontally center the image(little map icons) on mobile */
-}
-.mapOverlay section:last-child article:last-child label img:hover {
-  border: 2px solid lightgray;
-  opacity: 1;
-  transform: scale(0.95);
-}
-.mapOverlay section:last-child article:last-child :checked + label:before {
-  transform: scale(2);
-}
-.mapOverlay section:last-child article:last-child :checked + label img {
-  transform: scale(1);
-  border: 2px solid black;
-  opacity: 1;
-}
-.mapOverlay section:last-child article:last-child :checked + label img:hover {
-  opacity: 1;
-  transform: scale(1);
 }
