--- a/frontend/assets/css/style.scss
+++ b/frontend/assets/css/style.scss
@@ -78,16 +78,16 @@ a {
 a#sitetitle {
   color: white;
   text-decoration: none;
-  padding: 0.2em 0 0 1em;
+  padding: 4px 0 0 24px;
   display: block;
   position: fixed;
   width: 100%;
   background: $darkgreen;
-  height: 1.8em;
+  height: 44px;
   z-index: 9;
   font-family: "Corben", cursive;
-  font-size: 1.5em;
-  border-bottom: 0.1em solid darken($lightgreen, 20%);
+  font-size: 22px;
+  border-bottom: 4px solid darken($lightgreen, 20%);
   font-family: "Playfair Display", serif;
   font-family: "EB Garamond", serif;
 } // a#sitetitle
@@ -95,9 +95,7 @@ a#sitetitle {
 // NAV
 nav {
   height: 3em;
-
   top: 0;
-  background: lighten(black, 10%);
   //border-bottom:0.1em solid gray;
 } //nav
 #menu {
@@ -193,8 +191,8 @@ nav {
 #basemap {
   z-index: 0 !important;
   position: fixed;
-  top: 4em;
-  height: calc(100% - 4em);
+  top: 44px;
+  height: calc(100% - 44px);
   width: 100%;
   .leaflet-map-pane {
     filter: grayscale(22%) sepia(10%) saturate(92%) contrast(92%);
@@ -216,14 +214,16 @@ nav {
     // We still want clicks on the nav though
     z-index: 99;
     pointer-events: auto;
-    background: lighten(lightgray, 10%);
+    background: lighten(lightgray, 12%);
     height: 3.5em;
-    top: 2.8em;
+    top: 44px;
     border-bottom: 0;
     position: fixed;
     width: 60%;
     margin: 0 20%;
     font-family: "Pontano Sans", sans-serif;
+    border:1px solid $midgreen;
+    border-top:0;
     > ol {
       //1st level
       //counter-reset: li;
@@ -271,7 +271,7 @@ nav {
             opacity: 1;
           }
           &.active {
-            border-top: 0.9em solid $seafoam;
+            border-top: 18px solid $darkgreen;
             color: black;
             font-weight: bold;
             @include transition(all 300ms ease-in);
