feat: add legend

--- a/frontend/_includes/nav.liquid
+++ b/frontend/_includes/nav.liquid
@@ -2,9 +2,9 @@
 
 <a id="sitetitle" href="/">Movement and Common World in Early America</a>
 <nav>
-  <div id="menu">
-    <input id="legend" type="checkbox"/>
-    <label class="legend" role="button" for="legend">Menu</label>
+  <div id="mainmenu">
+    <input id="menu" type="checkbox"/>
+    <label class="menu" role="button" for="menu">Menu</label>
     <ol>
       <li> <a href="#overview">Overview</a></li>
       <li> <a href="#stories">Stories  </a>
